fix overflow-x

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@ body{
     background-image: url("https://media.discordapp.net/attachments/951024041056145459/953249731604271164/Capture_decran_2022-03-12_a_00.13.50.png?width=646&height=427");
     background-repeat: repeat-y;
     background-size: cover;
+    overflow-x: hidden;
 }
 
 html, body {
